--- a/poa_longform_styles_sa.css
+++ b/poa_longform_styles_sa.css
@@ -25,6 +25,16 @@ div.asset-promo.promo-splash div.promo-text {
 	color: #000;
 	padding: 8px 0 !important;
 }
+/* remove white background from caption on main image */
+.w_story-header-all div.asset-promo.promo-splash div.promo-text {
+	background-color: rgba(0, 0, 0, 0.4);
+	background: rgba(0, 0, 0, 0.4);
+	/* background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)); */
+}
+.w_story-header-all div.asset-promo.promo-splash div.promo-text p {
+	color: #fff;
+	letter-spacing: 1px;
+}
 
 /*  full screen image promo caption text */
 div.asset-promo.promo-splash div.promo-text p {
@@ -146,7 +156,8 @@ figure.story-asset + a + p + p + p b span.h3{
 /* drop caps for first par of each entry */
 a#chapter1 + p + p + p + p:first-letter,
 figure.story-asset + a + p + p + p + p:first-letter,
-p.first + p + p + p:first-letter {
+p.first + p + p + p:first-letter,
+div.asset-promo.promo-splash.nopadding.image-full + a + p + p + p + p:first-letter {
 	float: left;
 	/* color: #b3bec6; */
 	color: #000;
@@ -502,15 +513,17 @@ div.longform-group-inner.story-content.standard div.video-container {
 
 
 /* inline images */
-div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-full {
+div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-full,
+div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-half {
 	border: none;
 	padding: 0;
 	margin-bottom: 24px;
 
 }
-div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-full figcaption.description {
+div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-full figcaption.description,
+div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-half figcaption.description {
 	background: none;
-	padding: 4px;
+	padding: 4px 16px;
 }
 
 
@@ -598,7 +611,6 @@ div.longform-group-inner.story-content.standard figure.story-asset.story-asset-s
 		font-size: 3.4em;
 		margin-bottom: 0;
 	}
-
 	h1.story-header_title:before,
 	h1.story-header_title:before {/* POA */	
 		font-size: 24px;
@@ -609,6 +621,10 @@ div.longform-group-inner.story-content.standard figure.story-asset.story-asset-s
 	h1.story-header_title span:nth-of-type(1):before { /* state */
 		font-size: 24px;
 		line-height: 24px;
+	}
+
+	.w_story-header-all div.asset-promo.promo-splash div.promo-text {
+		background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
 	}
 
 	div.longform-group-inner.story-content.standard p > span.blockquote {
@@ -643,10 +659,16 @@ div.longform-group-inner.story-content.standard figure.story-asset.story-asset-s
 	}
 
 	/* inline images */
-	div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-full {
+	div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-full,
+	div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-half {
 		float: right;
 		width: 50%;
 		margin-left: 32px;
+	}
+
+	div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-full figcaption.description,
+	div.longform-group-inner.story-content.standard figure.story-asset.story-asset-secondary.image-half figcaption.description {
+		padding: 4px;
 	}
 
 
